// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`CloseIcon renders correctly 1`] = `
<svg
  height="16"
  viewBox="0 0 16 16"
  width="16"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Close Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M16 0H0v16h16z"
    />
    <path
      d="M2.47 2.47a.75.75 0 0 1 1.06 0l4.718 4.718 4.718-4.718a.75.75 0 0 1 .976-.073l.085.073a.75.75 0 0 1 0 1.06L9.308 8.25l4.719 4.72a.75.75 0 0 1 .072.976l-.072.085a.75.75 0 0 1-1.061 0L8.248 9.31l-4.718 4.72a.75.75 0 0 1-.976.072l-.084-.072a.75.75 0 0 1 0-1.061l4.717-4.72L2.47 3.53a.75.75 0 0 1-.073-.976z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;

exports[`CloseIcon renders large correctly 1`] = `
<svg
  height="24"
  viewBox="0 0 24 24"
  width="24"
  xmlns="http://www.w3.org/2000/svg"
>
  <title>
    Close Icon
  </title>
  <g
    fill="none"
    fillRule="evenodd"
  >
    <path
      d="M24 0H0v24h24z"
    />
    <path
      d="M3.214 3.213a.73.73 0 0 1 1.031 0l7.752 7.758 7.753-7.757a.73.73 0 0 1 .95-.071l.08.07a.73.73 0 0 1 .001 1.032l-7.753 7.758 7.753 7.759a.73.73 0 0 1 .07.95l-.07.081a.73.73 0 0 1-1.031 0l-7.753-7.759-7.752 7.759a.73.73 0 0 1-.95.07l-.081-.07a.73.73 0 0 1 0-1.031l7.752-7.759-7.753-7.758a.73.73 0 0 1-.07-.95z"
      fill="#262626"
      fillOpacity=".65"
      fillRule="nonzero"
    />
  </g>
</svg>
`;
